--- a/mcp/using-mcp/use-cases/account-management.mdx
+++ b/mcp/using-mcp/use-cases/account-management.mdx
@@ -14,7 +14,16 @@ The problem is that often you need both external systems (Slack and HubSpot) and
 
 There's a simpler solution: using MCP servers to connect all your tools so you can handle everything through Claude conversations. With MCP in Claude Desktop, you can connect Slack, HubSpot, and your internal tool in one place, so Claude can orchestrate the steps for you. In this guide, you'll learn how to turn a Slack signal (like a ‼️ reaction) into a HubSpot update, and optionally kick off a simple internal request, all without leaving Claude Desktop.
 
-![A demo of the account management workflow in Claude Desktop](assets/mcp-account-management-demo.mp4)
+<video
+  controls={false}
+  loop={true}
+  autoPlay={true}
+  muted={true}
+  width="100%"
+  className="mt-10"
+>
+  <source src="/assets/mcp/using-mcp/account-management/mcp-account-management-demo.mp4" type="video/mp4" />
+</video>
 
 ## What are we building?
 
@@ -22,11 +31,11 @@ We're building an account management workflow that connects Slack, HubSpot, and 
 
 You'll set up three MCP servers:
 
-- A Slack MCP server for finding conversations 
+- A Slack MCP server for finding conversations
 - A HubSpot MCP server for updating contacts and tasks
 - An internal API MCP server for creating small, auditable SalesOps requests
 
-![Before after diagram](assets/before-after-diagram.png)
+![Before after diagram](/assets/mcp/using-mcp/account-management/before-after-diagram.png)
 
 ## Prerequisites
 
@@ -43,7 +52,7 @@ Follow these guides to add both servers to Claude Desktop:
 
 Let's imagine that your team shares lead updates in a Slack channel called `#leads` and marks urgent messages with the ‼️ emoji. You want Claude to add a "Schedule call ASAP" note to the corresponding lead contacts in HubSpot.
 
-![A screenshot of the Slack channel with the ‼️ emoji reaction](assets/leads-bang-bang.png)
+![A screenshot of the Slack channel with the ‼️ emoji reaction](/assets/mcp/using-mcp/account-management/leads-bang-bang.png)
 
 Ask Claude:
 
@@ -58,11 +67,11 @@ Claude will:
 - Look up matching contacts in HubSpot.
 - Add a priority note to each contact record.
 
-![A screenshot of the Claude Desktop conversation with the HubSpot tool](assets/claude-slack+hubspot.png)
+![A screenshot of the Claude Desktop conversation with the HubSpot tool](/assets/mcp/using-mcp/account-management/claude-slack+hubspot.png)
 
 Once Claude has performed those actions, the contacts in HubSpot will have a "Schedule call ASAP" note added to their records.
 
-![A screenshot of the HubSpot contact record with the "URGENT: Call ASAP" note](assets/hubspot-note-urgent.png)
+![A screenshot of the HubSpot contact record with the "URGENT: Call ASAP" note](/assets/mcp/using-mcp/account-management/hubspot-note-urgent.png)
 
 At this point, you could stop and manually make account changes for each customer, or you could take the integration a step further and use [Gram](https://getgram.ai) to create a SalesOps MCP server that lets Claude interact with your internal account management system.
 
@@ -126,7 +135,16 @@ Keep the ngrok terminal running while you test with Gram.
 
 The following video walks you through the process of creating an MCP server on Gram. Follow each of the steps, referring to the [Gram quickstart guide](https://docs.getgram.ai/gram-quickstart) as necessary, to create a SalesOps MCP server:
 
-![A video walkthrough of creating an MCP server on Gram using the SalesOps OpenAPI document](assets/gram-salesops-internal.mp4)
+<video
+  controls={false}
+  loop={true}
+  autoPlay={true}
+  muted={true}
+  width="100%"
+  className="mt-10"
+>
+  <source src="/assets/mcp/using-mcp/account-management/gram-salesops-internal.mp4" type="video/mp4" />
+</video>
 
 - Import the SalesOps OpenAPI document into Gram and generate a toolset.
 - Fill in your environment variables in the toolset.
@@ -138,12 +156,12 @@ First, create a Gram API key:
 
 - In Gram, navigate to **Settings** in the sidebar, click **New API Key**, select the consumer option, and click **Create**. Copy the API key.
 
-Next, you need to get your MCP configuration and add it to Claude Desktop. 
+Next, you need to get your MCP configuration and add it to Claude Desktop.
 
 - Navigate to **Toolsets** in the Gram sidebar, select your SalesOps toolset, and open the **MCP** tab.
 - Click the **Enable** button, scroll down to the **Managed Authentication** section, and copy the configuration code.
 
-  ![Screenshot of Gram interface showing MCP installation configurations for pass-through and managed authentication options](assets/copy-managed-auth.png)
+  ![Screenshot of Gram interface showing MCP installation configurations for pass-through and managed authentication options](/assets/mcp/using-mcp/account-management/copy-managed-auth.png)
 
 - In Claude Desktop, go to **Settings → Developer → Edit Config** and add the following entry, replacing the placeholder values with your Gram server slug and API key:
 
@@ -218,11 +236,20 @@ Your `claude_desktop_config.json` should look something like this:
   Find the :bangbang: thread in #leads about Acme. Summarize who asked, what's needed, and timing with the Slack link. Then use HubSpot to add a note and a task due tomorrow at 10:00. Finally, create an internal upgrade request via SalesOps Bridge for +10 seats effective the first of next month, including the Slack thread URL and HubSpot ID.
   ```
 
-  ![A demo of the complete account management workflow in Claude Desktop](assets/mcp-account-management-demo.mp4)
+  <video
+    controls={false}
+    loop={true}
+    autoPlay={true}
+    muted={true}
+    width="100%"
+    className="mt-10"
+  >
+    <source src="/assets/mcp/using-mcp/account-management/mcp-account-management-demo.mp4" type="video/mp4" />
+  </video>
 
 - When Claude confirms the request ID, you can verify it by visiting the SalesOps Bridge dashboard at `http://localhost:3080/`.
 
-  ![A screenshot of the SalesOps Bridge dashboard](assets/taskmaster-salesops.png)
+  ![A screenshot of the SalesOps Bridge dashboard](/assets/mcp/using-mcp/account-management/taskmaster-salesops.png)
 
 ## Final thoughts
 
