--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -18,7 +18,7 @@ import { DocsHeaderIndex } from "@/components/nextra/docs/docs-header-index";
     <CardGrid cards={cards?.start} heading="Products" columns={4} />
   </section>
   <section>
-    <h2 className="bsmnt-text-heading-md">Idiomatic SDKs</h2>
+    <h2 className="bsmnt-text-heading-md">TEST!</h2>
     <div className="bsmnt-text-body-lg text-muted-foreground mt-2.5">
       Supported generation languages
     </div>
