--- a/mcp/tool-design/designing-rag-tools-for-llms/index.mdx
+++ b/mcp/tool-design/designing-rag-tools-for-llms/index.mdx
@@ -148,7 +148,7 @@ The second version tells the LLM what went wrong (typo in "Django"), and echoes 
 
 Let's build a Django documentation search API and expose it as an MCP tool through Gram. This example extends the RAG implementation from the RAG vs. MCP article by wrapping it in a REST API with proper input/output design for LLM consumption.
 
-You can find the complete project [here](#). Clone it and follow along, or build from scratch using the steps below.
+You can find the complete project [here](#). Clone it and follow along.
 
 ### Setup
 
@@ -158,6 +158,13 @@ Clone and install the dependencies:
 git clone https://github.com/ritza-co/speakeasy-examples.git
 cd speakeasy-examples/rag-mcp-example
 uv sync
+```
+
+Download the [Django 5.2.8 documentation PDF](https://app.readthedocs.org/projects/django/downloads/pdf/5.2.x/) and place it in the `scripts` directory as `django.pdf`. Run the indexing script to build the ChromaDB collection:
+
+```bash
+cd scripts
+uv run python build_rag_index.py
 ```
 
 ### Defining the search interface
@@ -308,12 +315,12 @@ uv run uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
 ### Deploying the MCP Server with Gram
 
-Gram is a service that allows you to create MCP servers using an OpenAPI document. Coding and building an MCP server from scratch is doable. You have tools like FastMCP to help, FastMCP cloud to host the server, and MCP SDKs to build MCP servers and expose them via HTTP streamable, for example. But at the end, you will: 
+Gram is a service that lets you create MCP servers from an OpenAPI document. Coding and building an MCP server from scratch is doable. You have tools like FastMCP to help, FastMCP cloud to host the server, and MCP SDKs to build MCP servers and expose them via HTTP streamable, for example. But at the end, you will: 
 
 - Manage an infrastructure: maintain and monitor a service. 
 - Implement CI/CD pipelines. 
 - Need to handle security, and only OAuth2.1 is supported, which is a complex protocol to handle. 
-- Gram generates MCP servers directly from your OpenAPI specification. You build a standard REST API, provide the OpenAPI document, and Gram handles the MCP protocol implementation, hosting, and authentication. This means you focus on implementing your endpoints and business logic – whether that's RAG search, database queries, or any API operations – not on coding the MCP server infrastructure.
+- Gram generates MCP servers directly from your OpenAPI specification. You build a standard REST API, provide the OpenAPI document, and Gram handles the MCP protocol implementation, hosting, and authentication. This means you focus on implementing your endpoints and business logic – whether that's RAG search, database queries, or API operations – rather than coding the MCP server infrastructure.
 
 With Gram, you will upload the OpenAPI document from the cloned project, configure the API URL using the Ngrok forwarding link, create the toolsets, enable remote MCP distribution, and then install and test it in Claude Desktop. 
 
@@ -388,7 +395,7 @@ Disable both the RAG tool and Claude's web search feature, then ask the same que
 Now that you've built a RAG tool for documentation search, consider what else becomes possible when you combine RAG with your MCP tools or other MCP tools:
 
 - You can design a [customer support agent](/mcp/using-mcp/use-cases/customer-support) for your customer. Combine a RAG tool for your product documentation with the [Zendesk MCP](/using-mcp/mcp-server-providers/zendesk) server, for example, or any CRM tools, support tickets, and analytics. The agent learns product context from documentation and then pulls customer data to provide personalized support responses.
-- You can power a code assistant for developers. Build a RAG tool for your SDK documentation and code examples, paired with MCP tools that interact with your sandbox API. The LLM searches for implementation patterns, retrieves example code, and tests it against your sandbox environment.
+- You can power a developer code assistant. Build a RAG tool for your SDK documentation and code examples, paired with MCP tools that interact with your sandbox API. The LLM searches for implementation patterns, retrieves example code, and tests it against your sandbox environment.
 - You can build an [account management](/mcp/using-mcp/use-cases/account-management) assistant for your sales team. Create a RAG tool that searches your company's sales playbooks and account management guides. Pair it with the [HubSpot MCP](/mcp/using-mcp/mcp-server-providers/hubspot) server. When a sales agent asks "update this client's status to renewal stage and log our last conversation", the LLM uses RAG to check your renewal protocols, then updates the contact record and creates the activity log in your CRM following those guidelines.
 
 ## Final thoughts
